# degenexus

./: .audit-log.md  .gitignore  .worktreeinclude  AGENTS.md  CLAUDE.md  CLAUDE_CODE_INTERNALS_AUDIT.md  README.md  audit-manifest-system-wide-2026-05-28.md  coverage.json  pyproject.toml  requirements.txt
.claude/: README.md  settings.json
.claude/agent-memory/: audit-targets.md
.claude/agents/: code-reviewer.md  docs-memory-curator.md  fdd-investigator.md  market-data-integrity-auditor.md  prompt-injection-auditor.md  risk-gate-verifier.md  security-auditor.md  ship.md  test-engineer.md  test-writer.md  trade-lifecycle-auditor.md
.claude/commands/: audit.md  build.md  code-simplify.md  plan.md  review.md  ship.md  spec.md  test.md
.claude/hooks/: cwd-changed-reminder.py  (+8 more)
memory/: ARCHITECTURE.md  DECISIONS.md  FAILURES.md  PROGRESS.md
src/: get-model-list.py  main.py  orchestrator.py
tests/: conftest.py  test_base_agent.py  test_ceo_agent.py  test_claude_config_validator.py  test_claude_evidence_payload_validator.py  test_claude_protect_sensitive_files.py  test_context_injector.py  test_data_analyst.py  test_execution_agent.py  test_execution_agent_conditions.py  test_execution_gate.py  test_fallback.py  test_indicators.py  test_market_feed.py  test_openrouter_client.py  test_orchestrator.py  test_performance_analytics.py  test_portfolio.py  test_portfolio_manager.py  test_prompt_sanitization.py  test_quant_agent.py  test_risk_gate.py  test_risk_manager.py  test_slippage.py  test_subagent_event_logger.py  test_trade_lifecycle.py  test_trade_store.py
(+114 files in other folders)
