[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-company"
version = "1.0.0"
description = "Multi-Agent AI Trading Company System"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.coverage.run]
omit = [
    "src/display/*",
    "src/main.py",
    "src/get-model-list.py",
    "src/orchestrator.py",
]

[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["ta", "ta.*", "yfinance", "yfinance.*", "anthropic", "openai", "openai.*"]
ignore_missing_imports = true
